--- a/bio.css
+++ b/bio.css
@@ -3,9 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family:'Comfortaa', cursive;
-    background-color: #3d7691;
-}
-
+    background-color: #3d7691;}
 
 .nav {
     list-style: none;
@@ -19,12 +17,20 @@
     display: inline-block;    
     padding: 1px;    
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     color: black;
-    padding-left: 20px;
-    padding-right: 20px;}
+    padding-left: 10px;
+    padding-right: 10px;}
     
+.home:hover {
+    background-color:#e29787;}    
+
+.about:hover {
+    background-color:#e29787;} 
+    
+.hobbies:hover {
+    background-color:#e29787;} 
 
 h1 {
     text-align: center;
@@ -33,8 +39,7 @@ h1 {
     border-top: solid;    
     background-color: #e29787}
 
-#photo {
-    
+#photo {    
     margin: 0px auto 40px auto;}
     
 #portrait {
@@ -47,52 +52,49 @@ h1 {
 
 .paragraph{
     border: 3px solid black;
-    
-}
+    text-align: justify;}
 
 #container p {
     font-size: 18px;
-    line-height: 1.7;
-    padding: 30px;    
-    background-color: #e29787;
-    }
+    line-height: 1.5;
+    padding: 20px;    
+    background-color: #e29787;}
 
-#container {
-    border-style: groove;
+#container {    
     border-color:rgb(0, 0, 0);
     width: 70%;
     margin: auto;    
-    border-style: solid;
-    
-    line-height: 1.8;
-    word-spacing: 2px;
-    background-color: #e29787}
+    border-style: solid;    
+    line-height: 1.5;
+    word-spacing: 1px;
+    background-color: #e29787;}
 
-.section{
-    
+.section{    
     border: 3px solid black;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
     border-bottom: none;
-    padding: 40px;
-    
+    padding: 40px;}
 
-
-}
 .top-div {
-    width: 70%;
-    margin: 50px auto 50px auto;}
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;}
 
 .top {
     font-family: 'Nanum Myeongjo', serif;
     display: inline;     
     padding: 5px;
-    border: 3px solid black;
+    border: 1px solid black;
+    border-radius: 3px;
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 900;}
+
+.top:hover {
+    background-color: #e29787;}
 
 
 
